--- a/styles/scrollStyle.css
+++ b/styles/scrollStyle.css
@@ -2,32 +2,39 @@ body {
     margin: 0;
     padding: 0;
 }
-.infinite {
-    width: 100%;
-    height: 770px;
-    background: rgba(240,50,255,0.6);
+img {
+    max-width:100%;
+    overflow-x: hidden;
+    display:block;
 }
-.infinite div {
+#content {
+    max-width: 100%;
+    height: 100%;
+    background: rgba(240,50,255,0.6);
+   
+}
+#content div {
     background: rgba(200,200,0);
     width: 100%;
     height: 100%;
+    
 }
 
-.infinite div:nth-child(7n + 1) {
+#content div:nth-child(7n + 1) {
     background:  rgba(255,10,25);
 }
-.infinite div:nth-child(7n + 2) {
+#content div:nth-child(7n + 2) {
     background:  rgba(200,200,0);
 }
-.infinite div:nth-child(7n + 3) {
+#content div:nth-child(7n + 3) {
     background:  rgba(240,50,255,0.6);
 }
-.infinite div:nth-child(7n + 4) {
+#content div:nth-child(7n + 4) {
     background:  rgba(255,10,25);
 }
-.infinite div:nth-child(7n + 5) {
+#content div:nth-child(7n + 5) {
     background:  rgba(200,200,0);
 }
-.infinite div:nth-child(7n + 6) {
+#content div:nth-child(7n + 6) {
     background:  rgba(240,50,255,0.6);
 }
