added persistent header element

--- a/styles/scrollStyle.css
+++ b/styles/scrollStyle.css
@@ -7,6 +7,12 @@ img {
     overflow-x: hidden;
     display:block;
 }
+#nav {
+        position: fixed;
+        top: 0;
+        width: 100%
+     
+}
 #content {
     max-width: 100%;
     height: 100%;
